# Alvium-Camera-Module-Python

./: .gitmodules  Camera.py  README.md  continous_stream_parallelwriting_timing.py  continous_stream_timing.py  frame_decoder.py  get_frames_timing.py  parameters.py  pyproject.toml
RPi4/BayerRG8_3fps_120s/: camera_features.txt
RPi4/BayerRG8_5fps_120s/: camera_features.txt
RPi4/BayerRG8_maxfps_120s/: camera_features.txt
RPi5/BayerRG12_5fps_120s/: camera_features.txt
RPi5/BayerRG8_5fps_120s/: camera_features.txt
alvium-camera-module-python/: camera_run.py
old_interface/: Alvium.py  alvium_preview.sh  alvium_viewer_payload_format.ipynb  interface.ipynb
pyalvium/: Camera.py  parameters.py
tests/RPi4/BayerRG12_3fps_120s/: camera_features.txt
tests/RPi4/BayerRG12_maxfps_120s/: camera_features.txt
tests/RPi5/BayerRG12_maxfps_120s/: camera_features.txt
tests/RPi5/BayerRG8_maxfps_120s/: camera_features.txt
tests/RPi5/BayerRG8_maxfps_120s_parallel3/: camera_features.txt
tests/RPi5/BayerRG8_maxfps_120s_parallel3_raw/: camera_features.txt
tests/RPi5/BayerRG8_maxfps_120s_raw/: camera_features.txt
